public action dodajkorisnika

--- a/PAUP_QA-master/QA/Views/Korisnik/Index.cshtml
+++ b/PAUP_QA-master/QA/Views/Korisnik/Index.cshtml
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li>@Html.ActionLink("Natrag na pitanja", "Index", "App")</li>
-                <li>@Html.ActionLink("Dodaj korisnika", "Registracija", "Korisnik")</li>
+                <li>@Html.ActionLink("Dodaj korisnika", "DodajKorisnika", "Korisnik")</li>
             </ul>
         </nav>
     </header>
