--- a/PAUP_QA-master/QA/Views/Korisnik/Registracija.cshtml
+++ b/PAUP_QA-master/QA/Views/Korisnik/Registracija.cshtml
@@ -43,7 +43,7 @@
             <!---Html.LabelFor(m => m.image)
         <input type="file" name="image" id="fileUpload" accept=".png,.jpg,.jpeg,.gif,.tif" />-->
     <p>Već imate profil? @Html.ActionLink("Prijava", "Prijava", "Korisnik")</p>
-            <button name="login" type="submit">
+            <button name="registracija" type="submit">
                 Registracija
             </button>
         }
