--- a/PAUP_QA-master/QA/Views/App/_PartialPitanje.cshtml
+++ b/PAUP_QA-master/QA/Views/App/_PartialPitanje.cshtml
@@ -1,40 +1,72 @@
 ﻿@using QA.Models
-@model Pitanje
+@using QA.Misc
+@model MixModel
+@{
+    Odgovor odgovor = new Odgovor();
+    if (User.Identity.IsAuthenticated)
+    {
+        ViewBag.Korisnik = ((User as LogiraniKorisnik).Id);
+    }
+}
 
 
-<title>@Model.pitanjeTekst</title>
+<title>
+    @foreach (var pit in Model.Pitanja)
+    {
+        @pit.pitanjeTekst
+    }
+</title>
 <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
             <div class="bg show">
                 <div class="question-block show">
                     <div class="header">
-                        @Html.ActionLink(".","Index","App",new {@class = "close"})
-                        <h1 class="modal-title">@Model.pitanjeTekst</h1>
-
+                        @Html.ActionLink(".", "Index", "App", new { @class = "close" })
+                        @foreach (var pit in Model.Pitanja)
+                        {
+                            <h1 class="modal-title">
+                                @pit.pitanjeTekst
+                            </h1>
+                            <h3 style="display:inline-block;">
+                                @pit.kategorijaId.kategorija
+                            </h3>
+                        }
                     </div>
                     <div class="modal-body">
                         <div class="answers-main-section">
                             <div class="answ-info">
-                                @foreach (var kor in ViewBag.SviKorisnici)
+                                @foreach (var kor in Model.Korisnici)
                                 {
-                                    if (kor.id == Model.korisnicko_ime)
+                                    foreach (var pit in Model.Pitanja)
                                     {
-                                <h2>@kor.korisnicko_ime</h2>
+                                        if (kor.id == pit.korisnicko_ime)
+                                        {
+                                            if (User.Identity.IsAuthenticated)
+                                            {
+                                                <h2>@Html.ActionLink((string)kor.korisnicko_ime, "DetaljiKorisnik", "Korisnik", new { id = kor.id }, new { @style = "color:#303133;", @id = "korisnikDetalji", @data_url = Url.Action("DetaljiKorisnik", "Korisnik", new { id = kor.id }) })</h2>
+
+                                            }
+                                            else
+                                            {
+                                                <h2>@kor.korisnicko_ime</h2>
+                                            }
+                                        }
                                     }
                                 }
                                 <img src="~/img/user.png" class="user">
                             </div>
                             <div class="answ-container">
-                                <p class="num-of-answ">Broj odgovora: 
-                                @if (ViewBag.Broj > 0)
-                                {
-                                <span>@ViewBag.Broj</span>
-                                }
-                                else
-                                {
-                                    <span>0</span>
-                                }
+                                <p class="num-of-answ">
+                                    Broj odgovora:
+                                    @if (ViewBag.Broj > 0)
+                                    {
+                                        <span>@ViewBag.Broj</span>
+                                    }
+                                    else
+                                    {
+                                        <span>0</span>
+                                    }
                                 </p>
                                 <div class="answers">
                                     @if (ViewBag.Broj == 0)
@@ -43,32 +75,63 @@
                                     }
                                     else
                                     {
-                                        foreach (var odg in ViewBag.SviOdgovori)
+                                        foreach (var odg in Model.Odgovori)
                                         {
-                                            if (odg.pitanje_id == Model.id && odg.najdraze == true)
+                                            foreach (var pit in Model.Pitanja)
                                             {
-                                                <div class="answer odabran">
-                                                    <p>@odg.odgovor</p>
-                                                </div>
-                                            }
-                                            else if (odg.pitanje_id == Model.id)
-                                            {
+                                                if (odg.pitanje_id == pit.id && odg.najdraze == true)
+                                                {
+                                                    <div class="answer odabran">
+                                                        <p>@odg.odgovor</p>
+                                                        @if (User.Identity.IsAuthenticated)
+                                                        {
+                                                            <p>
+                                                                @Html.ActionLink((string)odg.korisnickoIme.korisnicko_ime, "DetaljiKorisnik", "Korisnik", new { id = odg.korisnickoIme.id }, new { @style = "color:#303133;", @id = "korisnikDetalji", @data_url = Url.Action("DetaljiKorisnik", "Korisnik", new { id = odg.korisnickoIme.id }) })
+                                                            </p>
+                                                        }
+                                                    </div>
+                                                }
+                                                else if (odg.pitanje_id == pit.id)
+                                                {
 
-                                                <div class="answer">
-                                                    <p>@odg.odgovor</p>
-                                                </div>
+                                                    <div class="answer">
+                                                        <p>@odg.odgovor</p>
+                                                        @if ((User.Identity.IsAuthenticated && (User as LogiraniKorisnik).IsInRole(OvlastiKorisnik.Administrator)) || (User.Identity.IsAuthenticated && (User as LogiraniKorisnik).Id == pit.korisnicko_ime))
+                                                        {
+                                                            <p>
+                                                                @Html.ActionLink((string)odg.korisnickoIme.korisnicko_ime, "DetaljiKorisnik", "Korisnik", new { id = odg.korisnickoIme.id }, new { @style = "color:#303133;", @id = "korisnikDetalji", @data_url = Url.Action("DetaljiKorisnik", "Korisnik", new { id = odg.korisnickoIme.id }) })
+                                                            </p>
+                                                            <span>
+                                                                @Html.ActionLink("Najdraži", "OdaberiOdgovor", new { id = odg.id }, new { @style = "color:#000;", @data_url = Url.Action("OdaberiOdgovor", "App", new { id = odg.id }) })
+                                                            </span>
+                                                        }
+                                                        else if (User.Identity.IsAuthenticated)
+                                                        {
+                                                            <p>
+                                                                @Html.ActionLink((string)odg.korisnickoIme.korisnicko_ime, "DetaljiKorisnik", "Korisnik", new { id = odg.korisnickoIme.id }, new { @style = "color:#303133;", @id = "korisnikDetalji", @data_url = Url.Action("DetaljiKorisnik", "Korisnik", new { id = odg.korisnickoIme.id }) })
+                                                            </p>
+                                                        }
+                                                        else
+                                                        {
+                                                            <p>
+                                                                @odg.korisnickoIme.korisnicko_ime
+                                                            </p>
+                                                        }
+                                                    </div>
                                                 }
                                             }
                                         }
-                                        <div class="modal-footer">
-                                            <form class="answer-form">
-                                                <textarea placeholder="Upiši odgovor..."></textarea><br>
-                                                <input type="submit" value="Odgovori">
-                                            </form>
-                                        </div>
-                                    </div>
+                                    }
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                @Html.Partial("_PartialOdgovor", odgovor)
+                            }
+
                         </div>
                     </div>
-                </div>
-                @Styles.Render("/Content/style.css")
+                    @Styles.Render("/Content/style.css")
 
